--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     //tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    //html parser
+    implementation("org.seleniumhq.selenium:htmlunit-driver:4.13.0")
 
 
 
