--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,12 @@ dependencies {
     //tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
+    //
+    implementation("org.apache.httpcomponents:fluent-hc:4.5.14")
+    //metadata
+    implementation("com.drewnoakes:metadata-extractor:2.19.0")
+    //json
+    implementation("org.json:json:20250107")
 
 
 
