--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web:3.4.4")
     //Databases
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation("com.mysql:mysql-connector-j:9.2.0")
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
+//    implementation("com.mysql:mysql-connector-j:9.2.0")
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation("org.hibernate.orm:hibernate-community-dialects:6.6.13.Final")
     //Security
@@ -42,6 +43,11 @@ dependencies {
     implementation("com.drewnoakes:metadata-extractor:2.19.0")
     //json
     implementation("org.json:json:20250107")
+    //html
+    implementation("org.seleniumhq.selenium:selenium-java:4.33.0")
+    implementation("org.jsoup:jsoup:1.20.1")
+    //Validations
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 
 
