--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
 //    implementation("com.mysql:mysql-connector-j:9.2.0")
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation("org.hibernate.orm:hibernate-community-dialects:6.6.13.Final")
+//    implementation("org.hibernate.orm:hibernate-community-dialects:6.6.13.Final")
     //Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
@@ -37,6 +37,7 @@ dependencies {
     //tests
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'com.h2database:h2'
     //
     implementation("org.apache.httpcomponents:fluent-hc:4.5.14")
     //metadata
