--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     //Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     //tools
     compileOnly("org.projectlombok:lombok:1.18.38")
     annotationProcessor 'org.projectlombok:lombok:1.18.38'
