--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=false
-spring.datasource.driver-class-name=org.h2.Driver
+# H2 in-memory database
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+
+# Hibernate auto-creates tables from entities
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Show SQL in logs (optional but helpful)
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+
 
 
